Reverted to jQuery 3.4.1 to resolve an issue with the bootstrap collapsing menu.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,10 @@ footer {
   .portfolioTitles {
     font-size: 18px;
   }
+  .photo {
+    display: block;
+    margin: 0px auto;
+  }
 }
 
 @media screen and (max-width:459px){
